src/sass/components/_page.scss
@use '../includes/layout';
@use '../includes/responsive';

@mixin page {
  .neon-page {
    position: relative;
    left: 0;
    width: 100vw;
    @include layout.min-height(100);

    .neon-page__content-wrapper {
      flex-direction: row;
    }

    .neon-page__container {
      @include layout.min-height(100);
      overflow-x: hidden;

      @include responsive.responsive(larger-than-tablet) {
        padding-left: var(--neon-gutter-desktop);
        padding-right: var(--neon-gutter-desktop);
        max-width: var(--neon-max-width-page);
        width: 100%;
      }

      @include responsive.responsive(tablet) {
        max-width: 100%;
        width: 100%;
        padding-left: var(--neon-gutter-tablet);
        padding-right: var(--neon-gutter-tablet);
      }

      @include responsive.responsive(mobile-large) {
        padding-left: var(--neon-gutter-mobile);
        padding-right: var(--neon-gutter-mobile);
      }
    }

    &--with-top-nav .neon-page__container {
      @include layout.min-height(100, 'var(--neon-top-nav-height)');
    }

    &--left {
      &.neon-page--with-side-nav {
        @include responsive.responsive(larger-than-tablet) {
          .neon-page__container {
            padding-left: 0;
            padding-right: 0;
          }
        }
      }
    }

    &--center {
      .neon-page__container {
        margin: 0 auto;
      }
    }

    &.neon-page--with-side-nav .neon-page__container {
      @include responsive.responsive(larger-than-tablet) {
        max-width: calc(var(--neon-max-width-page) - var(--neon-side-nav-width));
      }
    }
  }
}

